--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "US Jobs"
 layout: default
 pagination:
     enabled: true
-description: "A great Jekyll theme developed by Sal @wowthemesnet."
+description: "Your go-to source for the latest job trends, career advice, and employment opportunities across the USA"
 ---
 
 
